# FastTFIDF

./: .gitignore  README.md
fast_tfidf/: Makefile  compile_commands.json  setup.py
fast_tfidf/.cache/clangd/index/: engine.cpp.A8ABDA0BFA2CA7AC.idx  engine.h.1F470EA901E2734C.idx  fast_tfidf.cpp.F1B95FFAC5B6C3FC.idx  robin_hood.h.0A7F921B127D5D15.idx
fast_tfidf/fast_tfidf/: engine.cpp  engine.h  fast_tfidf.cpp  fast_tfidf.pyx
fast_tfidf/fast_tfidf.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
fast_tfidf/tests/: test.py
polars_tfidf/: Cargo.toml  Makefile  \  pyproject.toml  sklearn_bench.py
polars_tfidf/python/polars_tfidf/: __init__.py  vectorizer.py
polars_tfidf/src/: bindings.rs  lib.rs  main.rs
